--- a/setup.cfg
+++ b/setup.cfg
@@ -16,3 +16,12 @@ where=src
 
 [options.package_data]
 src = registry_raw.txt
+
+[isort]
+profile = black
+
+[flake8]
+max-line-length = 88
+ignore =
+    E203  # whitespace before ':' - doesn't work well with black
+    W503  # line break before binary operator
