--- a/setup.cfg
+++ b/setup.cfg
@@ -1,21 +1,16 @@
 [metadata]
-name = src
+name = nsv
 
 [options]
-package_dir=
-    =src
-packages = find:
+packages = nsv
 zip_safe = False
 include_package_data = True
 install_requires =
     pooch
 python_requires = >=3.8
 
-[options.packages.find]
-where=src
-
 [options.package_data]
-src = registry_raw.txt
+nsv = registry_raw.txt
 
 [isort]
 profile = black
