--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,10 @@ packages = nsv
 zip_safe = False
 include_package_data = True
 install_requires =
+    cf_xarray
     pooch
+    scipy
+    xarray
 python_requires = >=3.8
 
 [options.package_data]
