--- a/setup.cfg
+++ b/setup.cfg
@@ -7,6 +7,8 @@ zip_safe = False
 include_package_data = True
 install_requires =
     cf_xarray
+    gsw
+    pandas
     pooch
     scipy
     xarray
