--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,8 +7,6 @@ repos:
     hooks:
       - id: check-added-large-files
       - id: check-yaml
-      - id: end-of-file-fixer
-      - id: trailing-whitespace
 
   - repo: https://github.com/pycqa/isort
     rev: 5.10.1
@@ -24,3 +22,12 @@ repos:
     rev: 4.0.1
     hooks:
        - id: flake8
+
+  - repo: local
+    hooks:
+       - id: pydoc-markdown
+         name: pydoc-markdown
+         language: python
+         additional_dependencies: ["pydoc-markdown"]
+         entry: bash -c 'pydoc-markdown -I nsv/ > docs/api.md'
+         pass_filenames: false
