--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -28,6 +28,6 @@ repos:
        - id: pydoc-markdown
          name: pydoc-markdown
          language: python
-         additional_dependencies: ["pydoc-markdown"]
+         additional_dependencies: ["pydoc-markdown==4.5.0"]
          entry: bash -c 'pydoc-markdown -I nsv/ > docs/api.md'
          pass_filenames: false
