--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -28,6 +28,7 @@ repos:
        - id: pydoc-markdown
          name: pydoc-markdown
          language: python
+         language_version: python3.9
          additional_dependencies: ["pydoc-markdown==4.5.0"]
          entry: bash -c 'pydoc-markdown -p nsv > docs/api.md'
          pass_filenames: false
