--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -28,7 +28,6 @@ repos:
        - id: pydoc-markdown
          name: pydoc-markdown
          language: python
-         language_version: python3.9
          additional_dependencies: ["pydoc-markdown==4.5.0"]
-         entry: bash -c 'pydoc-markdown -p nsv > docs/api.md || pydoc-markdown -p nsv > b/docs/api.md'
+         entry: bash -c 'pydoc-markdown -p nsv > docs/api.md'
          pass_filenames: false
