--- a/setup.cfg
+++ b/setup.cfg
@@ -11,7 +11,7 @@ install_requires =
     pandas
     pooch
     scipy
-    xarray
+    xarray<=2022.03.0
     geopy
     xoak
 python_requires = >=3.8
