--- a/.github/workflows/pre-commit.yaml
+++ b/.github/workflows/pre-commit.yaml
@@ -11,5 +11,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-    - uses: actions/setup-python@v4
+    - name: Install Conda environment with Micromamba
+      uses: mamba-org/provision-with-micromamba@v13
+      with:
+        environment-file: environment.yml
+        channels: conda-forge
+        cache-env: true
+    - name: Install package
+      run: |
+        python -m pip install --no-deps -e .
     - uses: pre-commit/action@v3.0.0
